# jvm

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/class/: ClassCatalog.hpp  ClassRepresentation.hpp
source/constant_pool/: ConstantBase.hpp  ConstantDouble.hpp  ConstantFloat.hpp  ConstantInteger.hpp  ConstantMethodHandle.hpp  ConstantPool.hpp  ConstantUtf8.hpp
source/metainfo/: field_info.hpp
source/metainfo/attribute/: AtrributeBase.hpp  AttributeCode.hpp
source/metainfo/constant_pool/: ConstantLong.hpp  ConstantPool.hpp  ConstantUtf8.hpp  other_constants.hpp
source/parser/: attribute_parser.cpp  class_parser.cpp  constant_pool_parser.cpp  field_parser.cpp  parser.cpp  parser.hpp
source/util/: InStream.hpp  util.hpp
test/: CMakeLists.txt  test_parser.cpp
test/resources/: Test1.java  TestConstant.java
test/resources/TestFields/: A.java  B.java
